-reformated source-code -fixed some tests (some still need fixing)